# esp32_mpy

./: .gitignore  .gitmodules  README_en.md  README_zh_CN.md  build-tensorflow-lite-micro.sh
example/camera_test/: sdkconfig
example/camera_test/main/: CMakeLists.txt  camera_test.c  drv_i2c.c
example/cdc_dual_ports/: CMakeLists.txt  sdkconfig  sdkconfig.usb
example/cdc_dual_ports/main/: CMakeLists.txt  idf_component.yml  tusb_serial_device_dual_main.c
example/cdc_msc/: CMakeLists.txt  sdkconfig  sdkconfig.usb
example/cdc_msc/main/: CMakeLists.txt  idf_component.yml  main.c
example/lv_port_esp32/: sdkconfig  sdkconfig.lvgl
example/lv_port_esp32/main/: CMakeLists.txt  main.c
example/msc_test/: sdkconfig  sdkconfig.base_s3
example/msc_udisk/: CMakeLists.txt  partitions_8M.csv  sdkconfig  sdkconfig.usb
example/msc_udisk/main/: idf_component.yml  main.c
hardware/datasheet/sp2/: 2.8HSD-ST7789V initial code.txt
project/aitest/: Makefile  mpconfigport.h  partitions_8M.csv
project/aitest/boards/: sdkconfig.oct_lvgl_sp4  sdkconfig.oct_lvgl_sp4_no_touch
project/aitest/boards/GENERIC_S3/: mpconfigboard.cmake  mpconfigboard.h
project/aitest/main/: CMakeLists.txt  idf_component.yml
project/aitest/modules/: _boot.py  main.py
project/aitest/src/: main.c  pyexec.c  test_esp32lvgl.c
project/aitest/src/adapter/: machine_timer.c  mphalport.c  uart.c
project/aitest/src/driver/: drv_aw9523b.c  drv_aw9523b.h  drv_i2c.c  drv_i2c.h  uart1.c  uart1.h
project/aitest/src/lvgl_mlab/: mkrules.cmake
project/aitest/src/mpy_modules/: mod_motor.c  my_motor.c  my_sensor.c
project/aitest/src/usb/: usb_cdc.c  usb_cdc.h  usb_cdc0826.c  usb_cdc0828.c
project/matatacar/: .gitignore  CMakeLists.txt  Makefile  apply_patch.sh  partitions-8MiB.csv  partitions-matatacar.csv
project/matatacar/boards/: sdkconfig.spiram_sx
project/matatacar/boards/matatacar/: mpconfigboard.cmake  sdkconfig.spiram_sx
project/matatacar/components/audio_hal/: CMakeLists.txt
project/matatacar/components/audio_pipeline/: audio_pipeline.c
project/matatacar/components/audio_recorder/: recorder_sr.c
project/matatacar/components/audio_stream/: i2s_stream.c
project/matatacar/components/esp_actions/: CMakeLists.txt
project/matatacar/components/esp_peripherals/: CMakeLists.txt
project/matatacar/components/tone_partition/: CMakeLists.txt
project/matatacar/config/: board.json  sdkconfig.base_s3
project/matatacar/examples/py/: motion_sensor_event.py
project/matatacar/main/: CMakeLists.txt  idf_component.yml
project/matatacar/modules/: event_start.py  main.py
project/matatacar/python_apps/: action.py  audio_play.py  communication.py  drv_led.py  drv_motion.py  drv_system.py  factory.py  power_on.py  protocol_v1.py  protocol_v2.py  sensor.py  system_call.py
project/matatacar/src/: main.c
project/matatacar/src/adapter/: mphalport.c.bak
project/matatacar/src/audio/: audio_player.c  speech_cn.c  speech_cn.h
project/matatacar/src/driver/: adc_check.c  adc_check.h  driver_update.c  driver_update.h  drv_aw20144.c  drv_aw20144.h  drv_bh1745.h  drv_ble.c  drv_i2c.h  drv_i2s.c  drv_i2s.h  drv_infrared_tube.c  drv_infrared_tube.h  drv_light_sensor.c  drv_light_sensor.h  drv_nvs.h  drv_step_motor.c  drv_step_motor.h  mt_esp32_button.c  mt_module_config.h
project/matatacar/src/mpy_modules/: mod_sensor.c  modaudio.c  modmatatalab.c  mpy_leds.c  mpy_leds.h  mt_mpy_ble.c  mt_mpy_button.h  mt_mpy_gyro.h
project/matatacar/tools/script/: play_test.py
project/matatacar/tools/vfs/: test0301.txt
project/matatacar_v2/: .gitignore  CMakeLists.txt  Makefile  mpconfigport.h  partitions-matatacar.csv
project/matatacar_v2/components/audio_board/: Kconfig.projbuild
project/matatacar_v2/components/audio_pipeline/: audio_element.c
project/matatacar_v2/components/audio_stream/: sam_stream.c
project/matatacar_v2/config/: mpconfigboard.cmake
project/matatacar_v2/main/: CMakeLists.txt
project/matatacar_v2/python_apps/: _boot.py  action.py  audio_play.py  audio_recorder.py  ble.py  communication.py  drv_led.py  drv_system.py  event.py  event_obj.py  factory.py  power_on.py  protocol_v1.py  protocol_v2.py  system_call.py  system_state.py  uftpd.py  wifi.py
project/matatacar_v2/python_apps/driver/: button.py
project/matatacar_v2/python_apps/events/: event_manager.py
project/matatacar_v2/src/: main.c
project/matatacar_v2/src/adapter/: uart.c  (+1 more)
project/matatacar_v3/: .gitignore  Makefile  apply_patch.sh  mpconfigport.h  partitions-matatacar.csv
project/matatacar_v3/config/: mpconfigboard.h  sdkconfig.ble  sdkconfig.freertos  sdkconfig.spiram_sx
project/matatacar_v3/main/: CMakeLists.txt
project/matatacar_v3/python_apps/: action.py  audio.py  drv_led.py  drv_led_matrix.py  drv_motion.py  drv_system.py  event.py  factory.py  led_matrix_data.py  matatacar.py  mic.py  nvs.py  ota.py  protocol_v1.py  protocol_v2.py  sensor.py  system_call.py  system_def.py  utility.py
project/matatacar_v3/src/: main.c
project/oak_lite/: .gitignore  CMakeLists.txt  Makefile  apply_patch.sh  mpconfigport.h  partitions-8MiB.csv  partitions-oak_lite.csv  set_idf.sh
project/oak_lite/components/: README.md
project/oak_lite/config/: manifest.py  sdkconfig.base_s3  sdkconfig.board
project/oak_lite/main/: CMakeLists.txt
project/oak_lite/modules/: _boot.py  audio_play.py  event.py  event_start.py  main.py  oak_lite.py
project/oak_lite/python_apps/: _boot.py  audio.py  audio_play.py  flashbdev.py  oak_lite.py  system_call.py  system_state.py
project/oak_lite/src/: main.c
project/vincibot/: .gitignore  Makefile  makeimg.py  partitions-matatacar.csv
project/vincibot/config/: mpconfigboard.cmake  sdkconfig.freertos  sdkconfig.spiram_sx
project/vincibot/main/: CMakeLists.txt
project/vincibot/python_apps/: _boot.py  action.py  button.py  communication.py  drv_led.py  drv_led_matrix.py  drv_motion.py  event.py  factory.py  flashbdev.py  mic.py  nvs.py  power_on.py  protocol_v1.py  protocol_v2.py  protocol_v3.py  script.py  sensor.py  system_call.py  utility.py  wifi.py
project/vincibot/src/: main.c
(+322 files in other folders)
